apps/rancher/ns-cattle-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
  labels:
    goldilocks.fairwinds.com/enabled: "true"
