apps/rancher/httproute-rancher.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: external
    namespace: networking
  hostnames:
  - "rancher.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: rancher
      port: 80
